Inmob-Salesforce/force-app/main/default/objects/Conf_Validaciones_SLA__c/Conf_Validaciones_SLA__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Guarda un listado de validaciones a realizar en las visualforce para poder activar o desactivar dicha validacion</description>
    <label>Conf Validaciones SLA</label>
</CustomObject>