Inmob-Salesforce/force-app/main/default/objects/Conf_Validaciones_SLA__c/fields/Activa__c.field-meta.xml
<CustomField>
    <fullName>Activa__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check que indica si la regla esta activa para ser validada en los controladores</description>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>