Inmob-Salesforce/force-app/main/default/objects/Conf_Validaciones_SLA__c/fields/Controladores__c.field-meta.xml
<CustomField>
    <fullName>Controladores__c</fullName>
    <description>Listado de controladores donde es utilizada la validación.</description>
    <label>Controladores</label>
    <type>TextArea</type>
</CustomField>