Inmob-Salesforce/force-app/main/default/objects/Conf_Validaciones_SLA__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <description>Almacena la descripción completa de la regla, para indicar como funciona</description>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>