Inmob-Salesforce/force-app/main/default/objects/Conf_Validaciones_SLA__c/fields/Valor_de_N__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_N__c</fullName>
    <description>Campo para asignar el valor especifico a validar en las validaciones que lo necesiten</description>
    <label>Valor de N</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>